// Code generated by Troto. DO NOT EDIT.
syntax = "proto3";
package google.protobuf;
message Any {
	string type_url = 1;
	bytes value = 2;
}
message DoubleValue {
	double value = 1;
}
message FloatValue {
	float value = 1;
}
message Int64Value {
	int64 value = 1;
}
message UInt64Value {
	uint64 value = 1;
}
message Int32Value {
	int32 value = 1;
}
message UInt32Value {
	uint32 value = 1;
}
message BoolValue {
	bool value = 1;
}
message StringValue {
	string value = 1;
}
message BytesValue {
	bytes value = 1;
}
message Duration {
	int64 seconds = 1;
	int32 nanos = 2;
}
message Timestamp {
	int64 seconds = 1;
	int32 nanos = 2;
}
message Type {
	string name = 1;
	repeated Field fields = 2;
	repeated string oneofs = 3;
	repeated Option options = 4;
	SourceContext source_context = 5;
	string syntax = 6;
}
message Field {
	enum Kind {
		TYPE_UNKNOWN = 0;
		TYPE_DOUBLE = 1;
		TYPE_FLOAT = 2;
		TYPE_INT64 = 3;
		TYPE_UINT64 = 4;
		TYPE_INT32 = 5;
		TYPE_FIXED64 = 6;
		TYPE_FIXED32 = 7;
		TYPE_BOOL = 8;
		TYPE_STRING = 9;
		TYPE_GROUP = 10;
		TYPE_MESSAGE = 11;
		TYPE_BYTES = 12;
		TYPE_UINT32 = 13;
		TYPE_ENUM = 14;
		TYPE_SFIXED32 = 15;
		TYPE_SFIXED64 = 16;
		TYPE_SINT32 = 17;
		TYPE_SINT64 = 18;
	}
	enum Cardinality {
		CARDINALITY_UNKNOWN = 0;
		CARDINALITY_OPTIONAL = 1;
		CARDINALITY_REQUIRED = 2;
		CARDINALITY_REPEATED = 3;
	}
	Kind kind = 1;
	Cardinality cardinality = 2;
	int32 number = 3;
	string name = 4;
	string type_url = 5;
	int32 oneof_index = 6;
	bool packed = 7;
	repeated Option options = 8;
	string json_name = 9;
	string default_value = 10;
}
message Enum {
	string name = 1;
	repeated EnumValue enumvalue = 2;
	repeated Option options = 3;
	SourceContext source_context = 4;
	string syntax = 5;
}
message EnumValue {
	string name = 1;
	int32 number = 2;
	repeated Option options = 3;
}
message Option {
	string name = 1;
	Any value = 2;
}
enum Syntax {
	SYNTAX_PROTO2 = 0;
	SYNTAX_PROTO3 = 1;
}
message Struct {
	map<string, Value> fields = 1;
}
message Value {
	oneof kind {
		NullValue null_value = 1;
		double number_value = 2;
		string string_value = 3;
		bool bool_value = 4;
		Struct struct_value = 5;
		ListValue list_value = 6;
	}
}
message ListValue {
	repeated Value values = 1;
}
enum NullValue {
	NULL_VALUE = 0;
}
message SourceContext {
	string file_name = 1;
}
message FieldMask {
	repeated string paths = 1;
}
message Empty {
}
message Api {
	string name = 1;
	repeated Method methods = 2;
	repeated Option options = 3;
	string version = 4;
	SourceContext source_context = 5;
	repeated Mixin mixins = 6;
	string syntax = 7;
}
message Method {
	string name = 1;
	string request_type_url = 2;
	string response_type_url = 3;
	bool request_streaming = 4;
	bool response_streaming = 5;
	repeated Option options = 6;
	Syntax syntax = 7;
}
message Mixin {
	string name = 1;
	string root = 2;
}